[gd_scene load_steps=6 format=3 uid="uid://cdhd6e64bmic6"]

[ext_resource type="Script" path="res://scripts/countdown.gd" id="1_beehj"]
[ext_resource type="StyleBox" uid="uid://bsw50svj55smc" path="res://themes/progress.tres" id="1_tvj0g"]
[ext_resource type="Texture2D" uid="uid://bvrdcwsmpr8kr" path="res://assets/bonuses/Star.png" id="3_br2me"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_scjip"]
bg_color = Color(1, 1, 1, 0.188235)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_iwwiw"]
emission_shape = 1
emission_sphere_radius = 16.0
particle_flag_disable_z = true
direction = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
gravity = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.3

[node name="ProgressBar" type="ProgressBar"]
custom_minimum_size = Vector2(326, 8)
size_flags_horizontal = 4
theme_override_styles/background = SubResource("StyleBoxFlat_scjip")
theme_override_styles/fill = ExtResource("1_tvj0g")
value = 32.73
show_percentage = false
script = ExtResource("1_beehj")

[node name="BaseTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="PauseTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="stars" type="GPUParticles2D" parent="."]
z_index = 1
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_iwwiw")
texture = ExtResource("3_br2me")

[connection signal="timeout" from="BaseTimer" to="." method="_on_base_timer_timeout"]
[connection signal="timeout" from="PauseTimer" to="." method="_on_pause_timer_timeout"]
